[gd_scene load_steps=9 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://space.png" type="Texture" id=2]
[ext_resource path="res://UFO.tscn" type="PackedScene" id=3]
[ext_resource path="res://song.ogg" type="AudioStream" id=4]
[ext_resource path="res://Unique.ttf" type="DynamicFontData" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 770.712, 394.681 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 86
font_data = ExtResource( 5 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 512, 310 )
texture = ExtResource( 2 )

[node name="UFO" parent="." instance=ExtResource( 3 )]
position = Vector2( 550.823, 261.778 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 540.514, 315.699 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 600 )
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50

[node name="ClicksLabel" type="Label" parent="Control/MarginContainer"]
margin_left = 50.0
margin_top = 50.0
margin_right = 974.0
margin_bottom = 550.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.74902, 0, 1 )
text = "Clicks: 0"

[node name="LoseLabel" type="Label" parent="Control/MarginContainer"]
margin_left = 50.0
margin_top = 250.0
margin_right = 974.0
margin_bottom = 349.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "You Lose!"
align = 1
valign = 1
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
